Scrollbar fixed

--- a/resources/assets/css/tabler-adjustments.css
+++ b/resources/assets/css/tabler-adjustments.css
@@ -420,4 +420,5 @@ a.actions-buttons-column.show:after {
 
 body {
     overflow-y: auto !important;
+    scrollbar-gutter: stable;
 }
